Bug 19301 - Safari: category scrolling arrow highlight overlaps category box
Fixed conflicts in the following files:
	HTML5/Web_ordering_app/index.html
	HTML5/Web_ordering_app/js/main.js
	HTML5/Web_ordering_app/js/views/card.js
	HTML5/Web_ordering_app/js/views/checkout.js
	HTML5/Web_ordering_app/js/views/delivery_addresses.js
	HTML5/Web_ordering_app/js/views/giftcard.js
	HTML5/Web_ordering_app/js/views/products.js
	HTML5/Web_ordering_app/js/views/quantity.js
	HTML5/Web_ordering_app/js/views/rewards.js
	HTML5/Web_ordering_app/js/views/tips.js
	HTML5/Web_ordering_app/skins/directory_mobile/views/mainView.js
	HTML5/Web_ordering_app/skins/mlb/views/mainView.js
	HTML5/Web_ordering_app/skins/paypal/template/mainTemplate.html
	HTML5/Web_ordering_app/skins/paypal/views/mainView.js
	HTML5/Web_ordering_app/skins/retail/views/mainView.js
	HTML5/Web_ordering_app/skins/weborder/css/mainCSS.css
	HTML5/Web_ordering_app/skins/weborder/views/mainView.js
	HTML5/Web_ordering_app/skins/weborder_mobile/views/mainView.js

--- a/skins/weborder/css/categories.css
+++ b/skins/weborder/css/categories.css
@@ -11,7 +11,7 @@
     font-size:1.5em;
     display: none;
     cursor: pointer;
-    width: 20px;
+    width: 15px;
     border-radius: 4px;
 }
 
